# lotsman

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: DESIGN.md  HOST_SCORING.md  SECURITY.md
proto/lotsman/v1/: lotsman.proto
scripts/: docker_smoke.py  marina.example.toml
src/lotsman/: __main__.py  jobs.py  manifest.py  server.py
src/marina/: __main__.py  config.py  dotenv.py  hub.py  mcp_server.py  router.py
tests/: conftest.py
tests/integration/: test_lotsman_daemon.py  test_marina_daemon.py  test_seas_docker_real.py  test_watchdogs_real.py
tests/service/: test_events_basic.py  test_files_basic.py  test_harvest_basic.py  test_kill_basic.py  test_logs_basic.py  test_marina_events_hub.py  test_marina_files_hub.py  test_marina_harvest_hub.py  test_marina_hub.py  test_marina_hub_seas.py  test_marina_mcp_server.py  test_marina_seas_search.py  test_run_basic.py  test_seas_clore_http.py  test_seas_docker_subprocess.py  test_seas_vast_subprocess.py  test_seas_verda_http.py  test_status_basic.py  test_tailfollow_basic.py  test_whoami_basic.py
tests/unit/: test_dotenv.py  test_manifest.py  test_marina_config.py  test_marina_router.py  test_mcp_render.py  test_offer_filters.py  test_perf_score.py  test_runtime.py  test_sanitize.py  test_scout_commands.py  test_scout_runner.py  test_seas_base.py  test_seas_docker_pure.py  test_seas_factory.py  test_seas_forwarding.py  test_seas_presets.py  test_seas_registry.py  test_seas_vast_pure.py  test_tail.py  test_watchdogs_checks.py  test_watchdogs_supervisor.py
(+31 files in other folders)
